EXTRA_DIST = right-phasevocoder.au right-sfplay.au right-vibrato.au
EXTRA_DIST += right-pitchextract.txt right-sfinfo.txt sine-pitch.txt
EXTRA_DIST += transcriber-studentscale.txt
EXTRA_DIST += sine-delay.au sine-downsample.au sine-negative.au
EXTRA_DIST += sine-pitch.txt sine-shifter.au sine-windowing.au


