SUBDIRS = MarPlayer MarGrid Marx2DGraph Marx2DGraphStacked MarxGL2Din3DSpaceGraph MarxGLGraph MarxGLMultiBufferGraph MarPhasevocoder
# don't include meaws in the SUBDIRS; we don't want to distribute it (yet).

EXTRA_DIST = README MarSystemQtWrapper.h MarSystemQtWrapper.cpp qoscclient.cpp qoscserver.cpp qosctypes.cpp qoscclient.h qoscserver.h qosctypes.h
